--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/Nuevo.cshtml
@@ -140,7 +140,15 @@
                     <div class="input-group-addon">
                         <i class="fa fa-calendar"></i>
                     </div>
-                    @Html.TextBoxFor(q => q.cn_Fecha_vcto, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "cn_Fecha_vcto" })
+                    @Html.DevExpress().DateEditFor(q=> q.cn_Fecha_vcto, settings =>
+                {
+                    settings.Name = "cn_Fecha_vcto";
+                    settings.Properties.UseMaskBehavior = true;
+                    settings.Properties.EditFormat = EditFormat.Date;
+                    settings.Properties.EditFormatString = "dd/MM/yyyy";
+                    settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                }).GetHtml() 
                     @Html.ValidationMessageFor(q => q.cn_Fecha_vcto, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -392,12 +400,6 @@
                             autoclose: true
                         })
                         $('#Fecha_contable').datepicker({
-                            autoclose: true
-                        })
-                        $('#Fecha_inicio').datepicker({
-                            autoclose: true
-                        })
-                        $('#cn_Fecha_vcto').datepicker({
                             autoclose: true
                         })
 
