--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Anular.cshtml
@@ -133,24 +133,40 @@
 
             <div class="col-md-2">
                 <div class="form-group">
-                    <label for="Fecha_PriPago">Fecha*</label>
+                    <label for="Fecha">Fecha*</label>
                     <div class="input-group date">
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
-                        @Html.TextBoxFor(q => q.Fecha, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "Fecha" })
+                        @Html.DevExpress().DateEditFor(q=> q.Fecha, settings =>
+                    {
+                        settings.Name = "Fecha";
+                        settings.Properties.UseMaskBehavior = true;
+                        settings.Properties.EditFormat = EditFormat.Date;
+                        settings.Properties.EditFormatString = "dd/MM/yyyy";
+                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                    }).GetHtml()
                         @Html.ValidationMessageFor(q => q.Fecha, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
             <div class="col-md-2">
                 <div class="form-group">
-                    <label for="Fecha_PriPago">Fecha pago*</label>
+                    <label for="Fecha_Pago">Fecha pago*</label>
                     <div class="input-group date">
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
-                        @Html.TextBoxFor(q => q.Fecha_Pago, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "Fecha_Pago" })
+                        @Html.DevExpress().DateEditFor(q=> q.Fecha_Pago, settings =>
+                    {
+                        settings.Name = "Fecha_Pago";
+                        settings.Properties.UseMaskBehavior = true;
+                        settings.Properties.EditFormat = EditFormat.Date;
+                        settings.Properties.EditFormatString = "dd/MM/yyyy";
+                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                    }).GetHtml()
                         @Html.ValidationMessageFor(q => q.Fecha_Pago, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -227,19 +243,6 @@
     }
 }
 <script>
-
-
-            $(function () {
-                //Date picker
-                $('#Fecha').datepicker({
-                    autoclose: true
-                })
-                $('#Fecha_Pago').datepicker({
-                    autoclose: true
-                })
-
-            });
-
             $("#Valor_a_pagar").keyup(function () {
                 armar_diario();
             });
