--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/LiquidacionOrdenCompra/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/LiquidacionOrdenCompra/Nuevo.cshtml
@@ -44,24 +44,40 @@
             </div>
             <div class="col-md-2">
                 <div class="form-group">
-                    <label for="">Fecha liquidación</label>
+                    <label for="li_fecha">Fecha liquidación</label>
                     <div class="input-group date">
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
-                        @Html.TextBoxFor(q => q.li_fecha, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "li_fecha" })
+                        @Html.DevExpress().DateEditFor(q=> q.li_fecha, settings =>
+                    {
+                        settings.Name = "li_fecha";
+                        settings.Properties.UseMaskBehavior = true;
+                        settings.Properties.EditFormat = EditFormat.Date;
+                        settings.Properties.EditFormatString = "dd/MM/yyyy";
+                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                    }).GetHtml()
                         @Html.ValidationMessageFor(q => q.li_fecha, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
             <div class="col-md-2">
                 <div class="form-group">
-                    <label for="">Fecha contable</label>
+                    <label for="oe_fecha">Fecha contable</label>
                     <div class="input-group date">
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
-                        @Html.TextBoxFor(q => q.oe_fecha, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "li_fecha" })
+                        @Html.DevExpress().DateEditFor(q=> q.oe_fecha, settings =>
+                    {
+                        settings.Name = "oe_fecha";
+                        settings.Properties.UseMaskBehavior = true;
+                        settings.Properties.EditFormat = EditFormat.Date;
+                        settings.Properties.EditFormatString = "dd/MM/yyyy";
+                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                    }).GetHtml()
                         @Html.ValidationMessageFor(q => q.oe_fecha, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -158,38 +174,6 @@
 
 <script>
 
-    $(function () {
-
-
-        $('#fecha_oc').datepicker({
-            autoclose: true
-        });
-        $('#fecha_llegada').datepicker({
-            autoclose: true
-        });
-
-        $('#fecha_embarque').datepicker({
-            autoclose: true
-        });
-        $('#fecha_desanualizacion').datepicker({
-            autoclose: true
-        });
-        $('#li_fecha').datepicker({
-            autoclose: true
-        });
-    });
-
-
-
-    $(function () {
-
-
-        $('#or_fecha').datepicker({
-            autoclose: true
-        });
-
-
-    });
     function calclar_costo() {
         var datos = {
             IdTransaccionSession: $("#IdTransaccionSession").val(),
