--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Anular.cshtml
@@ -153,7 +153,15 @@
                                 <div class="input-group-addon">
                                     <i class="fa fa-calendar"></i>
                                 </div>
-                                @Html.TextBoxFor(q => q.info_persona.pe_fechaNacimiento, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "pe_fechaNacimiento" })
+                                @Html.DevExpress().DateEditFor(q=> q.info_persona.pe_fechaNacimiento, settings =>
+                            {
+                                settings.Name = "pe_fechaNacimiento";
+                                settings.Properties.UseMaskBehavior = true;
+                                settings.Properties.EditFormat = EditFormat.Date;
+                                settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                                settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                            }).GetHtml()
                                 @Html.ValidationMessageFor(q => q.info_persona.pe_fechaNacimiento, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -184,20 +192,7 @@
 }
 
 <script>
-    $(function () {
 
-
-        $('#fechaingreso').datepicker({
-            autoclose: true
-        });
-        $('#fechasalida').datepicker({
-            autoclose: true
-        });
-
-        $('#pe_fechaNacimiento').datepicker({
-            autoclose: true
-        });
-    });
 
     $("#pe_cedulaRuc").keyup(function () {
         validar();
