--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeDebitoFacturacion/_CmbProducto_NotaDebitoFacturacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeDebitoFacturacion/_CmbProducto_NotaDebitoFacturacion.cshtml
@@ -24,6 +24,6 @@
     })
     .BindList(new Core.Erp.Web.Areas.Facturacion.Controllers.NotaDeDebitoFacturacionController().get_list_bajo_demandaProducto,
     new Core.Erp.Web.Areas.Facturacion.Controllers.NotaDeDebitoFacturacionController().get_info_bajo_demandaProducto)
-    .Bind(Model.GetType() == typeof(Core.Erp.Info.Facturacion.fa_notaCreDeb_Info) ? "" : (Model == 0 ? "" : Model));
-}
-@comboBox.GetHtml()
+    .Bind((Model.GetType() == typeof(Core.Erp.Info.Facturacion.fa_notaCreDeb_det_Info) || Model.GetType() == typeof(System.Collections.Generic.List<Core.Erp.Info.Facturacion.fa_notaCreDeb_det_Info>))? "" : (Model == 0 ? "" : Model));
+    }
+    @comboBox.GetHtml()
