--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeCreditoFacturacion/_GridViewPartial_NotaCrebitoFacturacion_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeCreditoFacturacion/_GridViewPartial_NotaCrebitoFacturacion_det.cshtml
@@ -36,8 +36,8 @@
         {
             e.NewValues["IdProducto"] = 0;
             e.NewValues["IdCod_Impuesto_Iva"] = "IVA0";
-            e.NewValues["sc_cantidad"] = 0;
-            e.NewValues["sc_Precio"] = 0;
+            e.NewValues["sc_cantidad"] = "";
+            e.NewValues["sc_Precio"] = "";
             e.NewValues["sc_PordescUni"] = 0;
         };
 
